FTL B3 fails to realize that binary snippets might choose to omit their fast path https://bugs.webkit.org/show_bug.cgi?id=152901

Reviewed by Mark Lam.

This reduces the number of failures from 99 to 35.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::emitBinarySnippet):



Canonical link: https://commits.webkit.org/170987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194773 268f45cc-cd09-0410-ab3c-d52691b4dbfc